--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     },
     "scripts": {
         "start": "react-scripts start",
-        "build": "react-scripts build && gulp licenses",
+        /*"build": "react-scripts build && gulp licenses",
         "test": "react-scripts test --env=jsdom",
         "eject": "react-scripts eject",
         "lint:check": "eslint . --ext=js,jsx;  exit 0",
@@ -52,6 +52,7 @@
         "compile-sass": "node-sass src/assets/scss/material-kit-react.scss src/assets/css/material-kit-react.css",
         "minify-sass": "node-sass src/assets/scss/material-kit-react.scss src/assets/css/material-kit-react.min.css --output-style compressed",
         "map-sass": "node-sass src/assets/scss/material-kit-react.scss src/assets/css/material-kit-react.css --source-map true"
+        */
     },
     "browserslist": {
         "production": [
